Bug 50738 - [4.7 Regression] Bootstrap failure at revision 180028 on powerpc-apple-darwin9
Summary: [4.7 Regression] Bootstrap failure at revision 180028 on powerpc-apple-darwin9
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-15 12:02 UTC by Dominique d'Humieres
Modified: 2011-10-15 13:41 UTC (History)
2 users (show)

See Also:
Host: powerpc-apple-darwin9
Target: powerpc-apple-darwin9
Build: powerpc-apple-darwin9
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominique d'Humieres 2011-10-15 12:02:33 UTC
On powerpc-apple-darwin9 at revision 180029, bootstrap fails with:

gcc -c   -O0 -g -fexceptions -mmacosx-version-min=10.4 -DIN_GCC   -W -Wall -Wwrite-strings -Wcast-qual -Wstrict-prototypes -Wmissing-prototypes -Wmissing-format-attribute -pedantic -Wno-long-long -Wno-variadic-macros -Wno-overlength-strings -Wold-style-definition -Wc++-compat -fno-common  -DHAVE_CONFIG_H -I. -I. -I../../work/gcc -I../../work/gcc/. -I../../work/gcc/../include -I../../work/gcc/../libcpp/include -I/sw/include  -I../../work/gcc/../libdecnumber -I../../work/gcc/../libdecnumber/dpd -I../libdecnumber  -I/sw/include -DCLOOG_INT_GMP -DCLOOG_ORG  ../../work/gcc/ifcvt.c -o ifcvt.o
../../work/gcc/ifcvt.c: In function 'dead_or_predicable':
../../work/gcc/ifcvt.c:4176: error: 'HAVE_simple_return' undeclared (first use in this function)
../../work/gcc/ifcvt.c:4176: error: (Each undeclared identifier is reported only once
../../work/gcc/ifcvt.c:4176: error: for each function it appears in.)

This has been introduced by revision 180028

Author:	amodra
Date:	Sat Oct 15 10:36:00 2011 UTC (65 minutes, 35 seconds ago)
Changed paths:	2
Log Message:	
	* ifcvt.c (dead_or_predicable): Disable if-conversion when
	doing so is likely to kill a shrink-wrapping opportunity.

I am now testing the new block protected by '#ifdef HAVE_simple_return' as done elsewhere.
Comment 1 Alan Modra 2011-10-15 13:40:02 UTC
Author: amodra
Date: Sat Oct 15 13:39:58 2011
New Revision: 180038

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=180038
Log:
	PR bootstrap/50738
	* ifcvt.c (dead_or_predicable): Revert accidental commit with
	HAVE_simple_return test.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/ifcvt.c
Comment 2 Alan Modra 2011-10-15 13:41:00 UTC
Oops, sorry, I didn't mean to commit the HAVE_simple_return test (which is a change from my posted patch).