	PR bootstrap/50738 	* ifcvt.c (dead_or_predicable): Revert accidental commit with 	HAVE_simple_return test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@180038 138bc75d-0d04-0410-961f-82ee72b054a4